--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,20 +1,16 @@
-- title: Social Good!
+- title: Freebay
   event: MLH Fellowship Explorer Sprint 5
   date: Fall 2020 - Batch 1
 
-- title: Developer Tools!
+- title: Github Discord bot
   event: MLH Fellowship Explorer Sprint 4
   date: Fall 2020 - Batch 1
 
-- title: Machine Learning Project
-  event: MLH Fellowship Explorer Sprint 3
-  date: Fall 2020 - Batch 1
-
-- title: Fun Game
+- title: RecycleThis!
   event: MLH Fellowship Explorer Sprint 2
   date: Fall 2020 - Batch 1
 
-- title: Flash Card Generator
+- title: Zusammen
   event: MLH Fellowship Explorer Sprint 1
   date: Fall 2020 - Batch 1
   page-name: sprint1
